--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ main {
 }
 .main__item:nth-child(1) > button {
   border: none;
-  min-width: 50%;
+  width: 50%;
   padding-block: 1.2rem;
   border-radius: 2.5rem;
   background-color: var(--clr-pink);
